[project]
name = "rag-chatbot-confluence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.3",
    "chromadb>=1.0.8",
    "clickhouse-connect>=0.8.17",
    "ffmpeg>=1.4",
    "kaggle>=1.7.4.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-ollama>=0.3.2",
    "lark>=1.2.2",
    "lxml>=5.4.0",
    "markdownify>=1.1.0",
    "notebook>=7.4.1",
    "openai>=1.77.0",
    "pinecone-client>=6.0.0",
    "pydantic>=2.11.4",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "python-environ>=0.4.54",
    "pytube>=15.0.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "yt-dlp>=2025.4.30",
]
